log

Thu 14 Mar 2024 05:45:02 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
52a7cc0
Thu 14 Mar 2024 05:45:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:23:10: error: ‘numero_mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   23 |   return numero_mayor;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
823e527
Thu 14 Mar 2024 05:46:13 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:23:10: error: ‘numero_mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   23 |   return numero_mayor;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
98b391d
Thu 14 Mar 2024 05:47:52 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|6
total_score: 10/70
7c5d665
Thu 14 Mar 2024 06:13:39 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
c6ac06b
Thu 14 Mar 2024 06:23:30 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:22: error: array subscript is not an integer
   57 |         nuevo_arreglo[newSize] = arr[i];
      |                      ^
exercises.c:61:10: error: function returns address of local variable [-Werror=return-local-addr]
   61 |   return nuevo_arreglo;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ce58344
